--- a/main.html
+++ b/main.html
@@ -3,11 +3,41 @@
 <html>
 
 <head>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<!-- Vertically centered modal -->
+<!-- <div class="modal-dialog modal-dialog-centered">
+  ...
+</div> -->
+	<!-- Button trigger modal -->
+<button id = "open-modal" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Launch newton modal
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" id = "accio-modal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">New Modal</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vitae commodo metus, ac faucibus justo. Pellentesque vel lorem id felis ultricies vulputate. Aliquam feugiat tellus risus, lobortis viverra urna varius eu. Morbi elementum facilisis turpis. Duis tellus nibh, viverra et pharetra pretium, sodales id arcu. Aenean maximus felis egestas mi rutrum lacinia. Donec hendrerit rutrum urna, ac vulputate diam maximus nec. Sed eget tempus mauris. Proin tincidunt hendrerit erat blandit fringilla. Curabitur ut purus a nisi placerat mattis. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+<!--         <button type="button" class="btn btn-primary">Save changes</button> -->
+      </div>
+    </div>
+  </div>
+</div>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
